objects/User.object
<CustomObject>
    <fields>
        <fullName>CMI_Calibration_Role__c</fullName>
        <label>CMI Calibration Role</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMI_Customer_List__c</fullName>
        <label>Customer List</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMI_User_ID__c</fullName>
        <description>This field is mainly used to store the user Id that SF will get from the PC system in API call</description>
        <label>User ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_User_MultiLocValues__c</fullName>
        <description>This field is used to store the Multiple Location values of user from LDAP</description>
        <label>CSS_User_MultiLocValues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Capturist_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capturist Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certified_SMN__c</fullName>
        <label>Certified SMN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Approver_Paccar__c</fullName>
        <label>Community Approver Paccar</label>
        <relationshipName>Community_Approver_Paccar</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Community_Approver_Policy88__c</fullName>
        <label>Community Approver Policy88</label>
        <relationshipName>Community_Approver_Policy88</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Community_Approver_TSM__c</fullName>
        <label>Community Approver TSM</label>
        <relationshipName>Community_Approver_TSM</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Community_Approver__c</fullName>
        <label>Community Approver</label>
        <relationshipName>Community_Approver</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_SK__c</fullName>
        <label>Customer SK</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distributor_User_Related_Contact__c</fullName>
        <label>Distributor User Related Contact</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP__c</fullName>
        <label>ERP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BMS</fullName>
                </value>
                <value>
                    <fullName>MOVEX</fullName>
                </value>
                <value>
                    <fullName>MOVEX-175</fullName>
                </value>
                <value>
                    <fullName>MOVEX-190</fullName>
                </value>
                <value>
                    <fullName>MOVEX-200</fullName>
                </value>
                <value>
                    <fullName>MOVEX-250</fullName>
                </value>
                <value>
                    <fullName>MOVEX-270</fullName>
                </value>
                <value>
                    <fullName>MOVEX-CDK</fullName>
                </value>
                <value>
                    <fullName>MOVEX-CSP</fullName>
                </value>
                <value>
                    <fullName>MOVEX-MYD</fullName>
                </value>
                <value>
                    <fullName>MOVEX-UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Branch_Number__c</fullName>
        <description>To store “Parent Territory Code</description>
        <label>Branch Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_CSSP_Email__c</fullName>
        <formula>Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Mileage_Measure__c</fullName>
        <formula>if(&apos;united states&apos; == LOWER($User.Country)||&apos;united kingdom&apos; == LOWER($User.Country)||&apos;myanmar&apos; == LOWER($User.Country)||&apos;liberia&apos; == LOWER($User.Country),&apos;Miles&apos;,&apos;Kilometers&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL Mileage Measure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Primary_Service_Territory_Code__c</fullName>
        <description>Primary Service Territory of User to auto populate on WorkOrder</description>
        <inlineHelpText>Primary Service Territory of User to auto populate on WorkOrder</inlineHelpText>
        <label>Primary Service Territory Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Code__c</fullName>
        <description>Desc: This is field is used to store the fleet code of CIHR users.</description>
        <label>Fleet Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Abocode__c</fullName>
        <label>IAM_Abocode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Account_Number__c</fullName>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Account__c</fullName>
        <label>Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Application_Roles__c</fullName>
        <label>Application_Roles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IAM_Applicationgroups__c</fullName>
        <label>IAM_Applicationgroups</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IAM_CS_AWS__c</fullName>
        <formula>&quot;arn:aws:iam::922653816065:role/&quot;+CMI_Calibration_Role__c+&quot;,arn:aws:iam::922653816065:saml-provider/ConnectedSolutionSAML_Test&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CS_AWS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Challange_Answer1__c</fullName>
        <label>Challange Answer1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Challange_Answer2__c</fullName>
        <label>Challange Answer2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Challange_Answer3__c</fullName>
        <label>Challange Answer3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Challange_Question1__c</fullName>
        <label>Challange Question1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Challange_Question2__c</fullName>
        <label>Challange Question2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Challange_Question3__c</fullName>
        <label>Challange Question3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Challenge_Question_1__c</fullName>
        <label>Challenge Question 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>What city were you born in?</fullName>
                    <default>true</default>
                    <label>What city were you born in?</label>
                </value>
                <value>
                    <fullName>What is the first company that you worked for?</fullName>
                </value>
                <value>
                    <fullName>What is the first name of your spouse&apos;s father?</fullName>
                </value>
                <value>
                    <fullName>What is the make of your first car?</fullName>
                </value>
                <value>
                    <fullName>What is the name of the place your wedding reception was held?</fullName>
                </value>
                <value>
                    <fullName>What is the name of your first pet?</fullName>
                </value>
                <value>
                    <fullName>What is the name of your first school?</fullName>
                </value>
                <value>
                    <fullName>What is your favorite food?</fullName>
                </value>
                <value>
                    <fullName>What is your favorite sport?</fullName>
                </value>
                <value>
                    <fullName>What is your favorite vacation place?</fullName>
                </value>
                <value>
                    <fullName>What is your High School Mascot?</fullName>
                </value>
                <value>
                    <fullName>What is your mother’s maiden name?</fullName>
                </value>
                <value>
                    <fullName>Where did you first meet your spouse?</fullName>
                </value>
                <value>
                    <fullName>Who is your favorite actor, musician or artist?</fullName>
                </value>
                <value>
                    <fullName>Who is your favorite Sports star?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Challenge_Question_2__c</fullName>
        <label>Challenge Question 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>What city were you born in?</fullName>
                </value>
                <value>
                    <fullName>What is the first company that you worked for?</fullName>
                </value>
                <value>
                    <fullName>What is the first name of your spouse&apos;s father?</fullName>
                </value>
                <value>
                    <fullName>What is the make of your first car?</fullName>
                </value>
                <value>
                    <fullName>What is the name of the place your wedding reception was held?</fullName>
                </value>
                <value>
                    <fullName>What is the name of your first pet?</fullName>
                </value>
                <value>
                    <fullName>What is the name of your first school?</fullName>
                </value>
                <value>
                    <fullName>What is your favorite food?</fullName>
                </value>
                <value>
                    <fullName>What is your favorite sport?</fullName>
                </value>
                <value>
                    <fullName>What is your favorite vacation place?</fullName>
                </value>
                <value>
                    <fullName>What is your High School Mascot?</fullName>
                </value>
                <value>
                    <fullName>What is your mother’s maiden name?</fullName>
                </value>
                <value>
                    <fullName>Where did you first meet your spouse?</fullName>
                </value>
                <value>
                    <fullName>Who is your favorite actor, musician or artist?</fullName>
                </value>
                <value>
                    <fullName>Who is your favorite Sports star?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Challenge_Question_3__c</fullName>
        <label>Challenge Question 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>What city were you born in?</fullName>
                </value>
                <value>
                    <fullName>What is the first company that you worked for?</fullName>
                </value>
                <value>
                    <fullName>What is the first name of your spouse&apos;s father?</fullName>
                </value>
                <value>
                    <fullName>What is the make of your first car?</fullName>
                </value>
                <value>
                    <fullName>What is the name of the place your wedding reception was held?</fullName>
                </value>
                <value>
                    <fullName>What is the name of your first pet?</fullName>
                </value>
                <value>
                    <fullName>What is the name of your first school?</fullName>
                </value>
                <value>
                    <fullName>What is your favorite food?</fullName>
                </value>
                <value>
                    <fullName>What is your favorite sport?</fullName>
                </value>
                <value>
                    <fullName>What is your favorite vacation place?</fullName>
                </value>
                <value>
                    <fullName>What is your High School Mascot?</fullName>
                </value>
                <value>
                    <fullName>What is your mother’s maiden name?</fullName>
                </value>
                <value>
                    <fullName>Where did you first meet your spouse?</fullName>
                </value>
                <value>
                    <fullName>Who is your favorite actor, musician or artist?</fullName>
                </value>
                <value>
                    <fullName>Who is your favorite Sports star?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Cumpas_Distributor_CSRep__c</fullName>
        <description>This field is to store the WWID or the username of the Cumpas application CS rep for Movex accounts and is used to send the variable in SAML</description>
        <label>Distributor CS Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Cumpas_Distributor_Sales_Rep__c</fullName>
        <description>This field is to store the Distributor sales representative WWID for Cumpas application and to send it in SAML to enternal application</description>
        <label>Distributor Sales Representative</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Customercode__c</fullName>
        <label>IAM_Customercode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_DA_AWS_Role__c</fullName>
        <formula>&quot;arn:aws:iam::538763996546:role/&quot;+CMI_Calibration_Role__c+&quot;,arn:aws:iam::538763996546:saml-provider/SalesforceSAML_PROD&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AWS Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Deactivation_Mail_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivation Mail Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Dealercode__c</fullName>
        <label>IAM_Dealercode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Distributorbranchcode__c</fullName>
        <label>IAM_Distributorbranchcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Distributorcode__c</fullName>
        <label>IAM_Distributorcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_External_User_Num__c</fullName>
        <description>Auto assigned number for external users to be used in Guidanz Mobile primarily.</description>
        <displayFormat>{000000000}</displayFormat>
        <externalId>true</externalId>
        <label>IAM_External_User_Num</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>IAM_Final_Approver__c</fullName>
        <label>Final Approver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IAM_Fleetcode__c</fullName>
        <label>IAM_Fleetcode</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_HR_BMS_Instance_Name__c</fullName>
        <label>IAM_HR_BMS_Instance_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_HR_Customer_Number__c</fullName>
        <label>IAM_HR_Customer_Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_HR_Language__c</fullName>
        <label>Language Preference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Identity_Approver__c</fullName>
        <label>Identity Approver</label>
        <relationshipName>IAM_Identity_Approver</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>IAM_Lastpassword__c</fullName>
        <label>Lastpassword</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_License_Type__c</fullName>
        <label>IAM_License_Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Lightning_Redirection_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field is to determine if lightning redirection is required or not.</description>
        <label>Lightning Redirection Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Location_Modular_Access__c</fullName>
        <description>This field is to store the modular access of  a particular location and needs to send in SAML</description>
        <label>Location Modular Access</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Movex_Customer_Code__c</fullName>
        <label>Movex Customer Code</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_NpbuDiagExpire__c</fullName>
        <description>It stores subscription and its expiration date format for subscribed and admin managed NPBU Diagnostics app.</description>
        <label>NPBU Diagnostics Expiration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_OAM_Federation_ID__c</fullName>
        <description>This Field is used to send the value in connected app for Federation between IAM and OAM</description>
        <label>IAM OAM Federation Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Product_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IAM_Product-Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM_Promotion__c</fullName>
        <label>IAM_Promotion</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Qsolexpiration__c</fullName>
        <label>IAM_Qsolexpiration</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Qsolview__c</fullName>
        <label>IAM_Qsolview</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Random_Number__c</fullName>
        <label>Random Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Remaining_Login_Attempt__c</fullName>
        <label>IAM_Remaining_Login_Attempt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAM_SP_Code__c</fullName>
        <label>IAM_SP_Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_Type_of_Location__c</fullName>
        <description>this field gives the location type which this user is associated too</description>
        <label>Type of Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_UID__c</fullName>
        <description>LDAP username for exsisting LDAP Data and new User name for SF created Records</description>
        <externalId>true</externalId>
        <label>UID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IAM_UserDn__c</fullName>
        <description>Field to populate User DN value for sending to EDS system.</description>
        <label>User DN</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_User_Type__c</fullName>
        <defaultValue>&quot;External&quot;</defaultValue>
        <label>User Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_WWSPS_Region__c</fullName>
        <description>this field is to store the region value from the account</description>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAM_WorkGroup_id__c</fullName>
        <label>WorkGroup id</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IAM_is_Member_of__c</fullName>
        <label>is Member of</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IAM_swregexpire__c</fullName>
        <label>IAM_swregexpire</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modify_Role_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by JIT to determine if a Users roles should be modified manually</description>
        <inlineHelpText>Used by JIT to determine if a Users roles should be modified manually</inlineHelpText>
        <label>Modify Role Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_Storefront_User_Type__c</fullName>
        <defaultValue>&quot;Regular&quot;</defaultValue>
        <label>OSM Storefront User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                    <default>true</default>
                    <label>Regular</label>
                </value>
                <value>
                    <fullName>Distributor Admin</fullName>
                </value>
                <value>
                    <fullName>SSOEM Admin</fullName>
                </value>
                <value>
                    <fullName>OSM Reseller Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSM_Term_Condition_Acceptance_Date__c</fullName>
        <label>OSM Term&amp;Condition Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Group_Access__c</fullName>
        <label>Product Group Access</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RLS_Admin_Group_Email__c</fullName>
        <description>this is field is used for maintaing admin group email user Information at user level for RLS group</description>
        <label>RLS Admin Group Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RLS_Customer_Number__c</fullName>
        <description>this field is used to maintain the RLS end user Customer number on user level</description>
        <label>RLS Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RLS_Role__c</fullName>
        <label>RLS Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Setup_Rsc_Usename__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Setup Resource Usename</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TSP_FK__c</fullName>
        <label>TSP FK</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserGroup__c</fullName>
        <label>UserGroup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>EDS_Admin_User</fullName>
                </value>
                <value>
                    <fullName>EDS_Advanced_Author</fullName>
                </value>
                <value>
                    <fullName>EDS_Advanced_User</fullName>
                </value>
                <value>
                    <fullName>EDS_Analyst</fullName>
                </value>
                <value>
                    <fullName>EDS_Author</fullName>
                </value>
                <value>
                    <fullName>EDS_Intermediate_User</fullName>
                </value>
                <value>
                    <fullName>EDS_Internal_Review</fullName>
                </value>
                <value>
                    <fullName>EDS_Legal_Reviewer</fullName>
                </value>
                <value>
                    <fullName>EDS_Quality_Reviewer</fullName>
                </value>
                <value>
                    <fullName>EDS_Service_Writer</fullName>
                </value>
                <value>
                    <fullName>EDS_User</fullName>
                </value>
                <value>
                    <fullName>EDS_User_Employee</fullName>
                </value>
                <value>
                    <fullName>EDS_Wrkgrp_Admin_User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserLoginCounter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>To Store User&apos;s number of Logins</description>
        <label>UserLoginCounter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserPreviousLoginDate__c</fullName>
        <description>To store User&apos;s previous login date.</description>
        <label>UserPreviousLoginDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UserRoleName__c</fullName>
        <formula>UserRole.Name</formula>
        <label>UserRoleName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Location__c</fullName>
        <label>User Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <label>User Role</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Group_Name__c</fullName>
        <label>Work Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>activeEquipmentDuration__c</fullName>
        <defaultValue>&quot;21&quot;</defaultValue>
        <label>activeEquipmentDuration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CC_CurrencyCode__c</fullName>
        <description>Customized Currency field for Orgs which don&apos;t have  Multi-currency feautre.</description>
        <label>Currency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CompanyType__c</fullName>
        <label>CompanyType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISP</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ContactTypeRole__c</fullName>
        <description>CloudCraze contact type role</description>
        <label>Contact Type Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Researcher/Post Doc</fullName>
                    <default>true</default>
                    <label>Researcher/Post Doc</label>
                </value>
                <value>
                    <fullName>Purchasing Agent</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Lab Manager</fullName>
                </value>
                <value>
                    <fullName>Department Chair</fullName>
                </value>
                <value>
                    <fullName>Principal Investigator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__DataId__c</fullName>
        <description>B2B Commerce internal use only except when used with ccApiTestData.</description>
        <externalId>true</externalId>
        <inlineHelpText>B2B Commerce internal use only except when used with ccApiTestData.</inlineHelpText>
        <label>DataId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the current user gets qualified for the tax-exempt</description>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__User_Industry__c</fullName>
        <description>CloudCraze user industry</description>
        <label>User Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic research</fullName>
                    <default>true</default>
                    <label>Academic research</label>
                </value>
                <value>
                    <fullName>commercial</fullName>
                </value>
                <value>
                    <fullName>government</fullName>
                </value>
                <value>
                    <fullName>OEM-Reseller</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>